--- a/css/birthday.css
+++ b/css/birthday.css
@@ -24,20 +24,28 @@ body {
 }
 
 #cake-section {
-  margin-top: 40px;
+  margin-top: 30px;
+}
+
+.cake-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+  margin-bottom: 20px;
 }
 
 #cake {
   width: 250px;
+  height: auto;
 }
 
 #knife {
-  width: 100px;
-  margin-left: 20px;
+  width: 120px;
+  height: auto;
 }
 
 #cut-button {
-  margin-top: 20px;
   padding: 15px 30px;
   font-size: 1.2em;
   background-color: #e91e63;
@@ -45,6 +53,11 @@ body {
   border: none;
   border-radius: 10px;
   cursor: pointer;
+  margin-top: 10px;
+}
+
+#cut-button:hover {
+  background-color: #c2185b;
 }
 
 #slice {
