--- a/css/birthday.css
+++ b/css/birthday.css
@@ -35,9 +35,10 @@ body {
   margin-bottom: 20px;
 }
 
-#cake {
-  width: 250px;
+#cake-image {
+  width: 300px;
   height: auto;
+  margin-top: 20px;
 }
 
 #knife {
